<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateCabinas extends Migration{
	public function up(){ 
 		Schema::create('cabinas', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->date('fechaHora');
			$table->string('codigo');
			$table->string('location');
			$table->timestamps();
		});
 	} 
	public function down(){
 
	} 
}