<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateVotos extends Migration{
	public function up(){ 
 		Schema::create('votos', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->integer('cantidadVoto');

			$table->timestamps();

		});
 	} 
	public function down(){
 
	} 
}